--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+<*.OGG> filter=lfs diff=lfs merge=lfs -text
+<*.PSD> filter=lfs diff=lfs merge=lfs -text
+<*.PNG> filter=lfs diff=lfs merge=lfs -text
