--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,52 @@
-# Auto detect text files and perform LF normalization
+###############################################################################
+# Set default behavior to automatically normalize line endings.
+###############################################################################
 * text=auto
-<*.OGG> filter=lfs diff=lfs merge=lfs -text
-<*.PSD> filter=lfs diff=lfs merge=lfs -text
-<*.PNG> filter=lfs diff=lfs merge=lfs -text
+
+###############################################################################
+# Set default behavior for command prompt diff.
+#
+# This is needed for earlier builds of msysgit that do not have it on by
+# default for C# files.
+# Note: This is only used by the command line.
+###############################################################################
+*.cs     diff=csharp
+
+###############################################################################
+# Set the merge driver for project and solution files.
+#
+# Merging from the command prompt will add diff markers to the files if there
+# are conflicts (merging from Visual Studio is not affected by the settings below; in VS,
+# diff markers are never inserted). Diff markers may cause the following 
+# file extensions to fail to load in Visual Studio. An alternative would be to treat
+# these files as binary, which will always conflict and require user intervention
+# with every merge. To do so, uncomment the entries below.
+###############################################################################
+#*.sln       merge=binary
+#*.csproj    merge=binary
+#*.vbproj    merge=binary
+#*.vcxproj   merge=binary
+#*.vcproj    merge=binary
+#*.dbproj    merge=binary
+#*.fsproj    merge=binary
+#*.lsproj    merge=binary
+#*.wixproj   merge=binary
+#*.modelproj merge=binary
+#*.sqlproj   merge=binary
+#*.wwaproj   merge=binary
+
+
+# Large binary files
+###############################################################################
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
+*.dag filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.tga filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.tsv filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
